src/objects/Case_Step__c.object
<CustomObject>
    <fields>
        <fullName>Associate_Case_Status__c</fullName>
        <label>Associate Case Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Plan</label>
        <referenceTo>Case_Plan__c</referenceTo>
        <relationshipLabel>Case Steps</relationshipLabel>
        <relationshipName>Case_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Steps</relationshipLabel>
        <relationshipName>Case_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flow__c</fullName>
        <label>Flow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCompleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <formula>&quot;Case_Step__c&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Object API Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_Field_API_Name__c</fullName>
        <defaultValue>&quot;Start_When__c&quot;</defaultValue>
        <label>Picklist Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_When__c</fullName>
        <label>Start_When__c</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Send Reports To Client</fullName>
                </value>
                <value>
                    <fullName>Request Reports</fullName>
                </value>
                <value>
                    <fullName>Wait For Approval</fullName>
                </value>
                <value>
                    <fullName>Account Setup</fullName>
                </value>
                <value>
                    <fullName>Create Account</fullName>
                </value>
                <value>
                    <fullName>Create Contact</fullName>
                </value>
                <value>
                    <fullName>Send Email</fullName>
                </value>
                <value>
                    <fullName>Test Case Step Internal</fullName>
                </value>
                <value>
                    <fullName>Test Step</fullName>
                </value>
                <value>
                    <fullName>Update Opportunity</fullName>
                </value>
                <value>
                    <fullName>Update Opportunity Status</fullName>
                </value>
                <value>
                    <fullName>create Refresh</fullName>
                </value>
                <value>
                    <fullName>test user Step</fullName>
                </value>
                <value>
                    <fullName>Case Step Testing</fullName>
                </value>
                <value>
                    <fullName>Direct User</fullName>
                </value>
                <value>
                    <fullName>Test New Flow</fullName>
                </value>
                <value>
                    <fullName>Test 2</fullName>
                </value>
                <value>
                    <fullName>Test Case Step</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>xyz</fullName>
                </value>
                <value>
                    <fullName>Update Contact</fullName>
                </value>
                <value>
                    <fullName>Test User 2</fullName>
                </value>
                <value>
                    <fullName>Test User</fullName>
                </value>
                <value>
                    <fullName>Add User To Public Group</fullName>
                </value>
                <value>
                    <fullName>Wait For User Response</fullName>
                </value>
                <value>
                    <fullName>Create Community User</fullName>
                </value>
                <value>
                    <fullName>Create User</fullName>
                </value>
                <value>
                    <fullName>Manager Approval</fullName>
                </value>
                <value>
                    <fullName>IT Approvals</fullName>
                </value>
                <value>
                    <fullName>Request Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Name__c</fullName>
        <formula>Object_API_Name__c + &apos;&apos; + &apos;Start When&apos; + &apos;&apos; + Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Name</label>
        <type>Text</type>
    </fields>
    <label>Case Step</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Associate_Case_Status__c</columns>
        <columns>Start_When__c</columns>
        <columns>Is_Required__c</columns>
        <columns>IsCompleted__c</columns>
        <columns>Case__c</columns>
        <columns>Case_Plan__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Case Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>